tests/ui/feature-gates/feature-gate-non_lifetime_binders.stderr
error[E0658]: only lifetime parameters can be used in this context
  --> $DIR/feature-gate-non_lifetime_binders.rs:1:20
   |
LL | fn foo() where for<T> T:, {}
   |                    ^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = help: add `#![feature(non_lifetime_binders)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
